# leshy

./: AGENTS.md  Cargo.toml  README.md
.codex/skills/leshy-linear-workflow/: SKILL.md
.codex/skills/leshy-linear-workflow/agents/: openai.yaml
.github/workflows/: rust.yml
crates/leshy-cli/: Cargo.toml
crates/leshy-cli/src/: main.rs
crates/leshy-cli/tests/: index_command.rs
crates/leshy-core/: Cargo.toml
crates/leshy-core/src/: error.rs  graph.rs  ids.rs  index.rs  lib.rs  parse.rs  path.rs  scan.rs
crates/leshy-index/: Cargo.toml
crates/leshy-index/src/: lib.rs  tests.rs
crates/leshy-index/src/tests/: rust.rs
crates/leshy-lang-rust/: Cargo.toml
crates/leshy-lang-rust/src/: layout.rs  lib.rs  tests.rs  use_aliases.rs
crates/leshy-lang-rust/tests/: rust_fixtures.rs
crates/leshy-parser/: Cargo.toml
crates/leshy-parser/src/: lib.rs
docs/: stable-symbol-ids-rust.md  stable-symbol-ids.md
tests/fixtures/rust/: README.md
tests/fixtures/rust/invalid_crate/: Cargo.toml
tests/fixtures/rust/mini_crate/: Cargo.toml
tests/fixtures/rust/mini_crate/src/: lib.rs  model.rs
tests/fixtures/rust/mini_crate/src/service/: cache.rs  mod.rs
