[package]
name = "leshy-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["lang-rust"]
lang-rust = ["dep:leshy-lang-rust"]

[[bin]]
name = "leshy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
leshy-index = { path = "../leshy-index" }
leshy-lang-rust = { path = "../leshy-lang-rust", optional = true }
leshy-parser = { path = "../leshy-parser" }
